--- a/expose-outfits-reactjs/src/components/Product.css
+++ b/expose-outfits-reactjs/src/components/Product.css
@@ -20,3 +20,9 @@
     margin: 2px;
     border-radius: 5px;
 }
+
+.lips {
+    display: inline-block;
+    vertical-align: top;
+    cursor: url(play.png), pointer;
+}
